--- a/FrontToBack2/Areas/AdminArea/Views/Shared/_AdminLayout.cshtml
+++ b/FrontToBack2/Areas/AdminArea/Views/Shared/_AdminLayout.cshtml
@@ -183,6 +183,13 @@
                         </a>
                     </li>
 
+                                   <li class="nav-item">
+                        <a class="nav-link" asp-area="adminarea" asp-controller="Slider" asp-action="index">
+                            <i class="mdi mdi-home menu-icon"></i>
+                            <span class="menu-title">Slider</span>
+                        </a>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="pages/forms/basic_elements.html">
                             <i class="mdi mdi-view-headline menu-icon"></i>
